# lib/db/src/schema/index.ts
@@ -1,3 +1,5 @@
+export * from "./visitors";
+
 // Export your models here. Add one export per file
 // export * from "./posts";
 //
